[package]
name = "rs-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = { version = "0.34.0", features = ["serde"] }
vulkano-shaders = "0.34.0"
winit = "0.28"
vulkano-util = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
winit_glium = { package = "winit", version = "0.27.1" }

[workspace]
members = [ "app","gpu"]
